--- a/jetstreamer-firehose/Cargo.toml
+++ b/jetstreamer-firehose/Cargo.toml
@@ -25,7 +25,7 @@ solana-runtime.workspace = true
 solana-hash.workspace = true
 solana-geyser-plugin-manager.workspace = true
 solana-storage-proto.workspace = true
-solana-pubkey.workspace = true
+solana-address.workspace = true
 solana-transaction.workspace = true
 solana-transaction-status.workspace = true
 solana-ledger.workspace = true
