--- a/jetstreamer-utils/Cargo.toml
+++ b/jetstreamer-utils/Cargo.toml
@@ -27,3 +27,6 @@ tempfile.workspace = true
 libc.workspace = true
 solana-logger.workspace = true
 ctrlc.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+once_cell.workspace = true
