--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ thiserror = { version = "2", default-features = false }
 reqwest = { version = "0.12", default-features = false }
 anyhow = { version = "1", default-features = false }
 base64 = "0.22"
+serial_test = "2"
 bincode = "1"
 bs58 = { version = "0", default-features = false }
 cbor = "0"
