--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ reqwest = { version = "0.12", default-features = false }
 anyhow = { version = "1", default-features = false }
 base64 = "0.22"
 serial_test = "2"
-bincode = "1"
+wincode = { version = "0.2", features = ["derive", "solana-short-vec"] }
 bs58 = { version = "0", default-features = false }
 cbor = "0"
 cid = "0"
