--- a/jetstreamer-firehose/Cargo.toml
+++ b/jetstreamer-firehose/Cargo.toml
@@ -28,6 +28,7 @@ solana-geyser-plugin-manager.workspace = true
 solana-storage-proto.workspace = true
 solana-address.workspace = true
 solana-transaction.workspace = true
+solana-message.workspace = true
 solana-transaction-status.workspace = true
 solana-ledger.workspace = true
 solana-signature.workspace = true
@@ -42,7 +43,7 @@ thiserror.workspace = true
 cid.workspace = true
 multihash.workspace = true
 base64.workspace = true
-bincode.workspace = true
+wincode.workspace = true
 solana-logger.workspace = true
 log.workspace = true
 rseek.workspace = true
