--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,9 @@ serde_cbor = "0"
 agave-geyser-plugin-interface = "3"
 solana-address = "1"
 solana-hash = "3"
+solana-blake3-hasher = "=3.0.0"
+solana-epoch-rewards-hasher = "=3.0.0"
+solana-keccak-hasher = "=3.0.0"
 solana-logger = "3"
 solana-signature = { version = "3", default-features = false }
 solana-accounts-db = "3"
@@ -75,6 +78,7 @@ solana-transaction = "3"
 solana-transaction-status = "3"
 solana-sdk-ids = "3"
 solana-reward-info = "3"
+solana-sysvar = "=3.0.0"
 sha2 = "0.10"
 tonic = { version = "0", default-features = false }
 tonic-build = "0"
@@ -105,6 +109,10 @@ jetstreamer-firehose.workspace = true
 jetstreamer-plugin.workspace = true
 jetstreamer-utils.workspace = true
 url.workspace = true
+solana-sysvar.workspace = true
+solana-blake3-hasher.workspace = true
+solana-epoch-rewards-hasher.workspace = true
+solana-keccak-hasher.workspace = true
 
 [dev-dependencies]
 clickhouse.workspace = true
