--- a/jetstreamer-plugin/Cargo.toml
+++ b/jetstreamer-plugin/Cargo.toml
@@ -23,3 +23,4 @@ thiserror.workspace = true
 sha2.workspace = true
 dashmap.workspace = true
 once_cell.workspace = true
+solana-sdk-ids.workspace = true
