--- a/jetstreamer-node/Cargo.toml
+++ b/jetstreamer-node/Cargo.toml
@@ -9,6 +9,23 @@ documentation.workspace = true
 keywords.workspace = true
 
 [dependencies]
+crossbeam-channel.workspace = true
 jetstreamer-firehose.workspace = true
+log.workspace = true
+reqwest.workspace = true
+serde_json.workspace = true
+solana-accounts-db.workspace = true
+solana-clock.workspace = true
+solana-genesis-utils.workspace = true
+solana-geyser-plugin-manager.workspace = true
+solana-hash.workspace = true
+solana-ledger.workspace = true
+solana-logger.workspace = true
+solana-rpc.workspace = true
+solana-runtime.workspace = true
+solana-signature.workspace = true
+solana-entry.workspace = true
+solana-transaction.workspace = true
+solana-transaction-status.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
