--- a/jetstreamer-node/Cargo.toml
+++ b/jetstreamer-node/Cargo.toml
@@ -28,5 +28,6 @@ solana-signature.workspace = true
 solana-entry.workspace = true
 solana-transaction.workspace = true
 solana-transaction-status.workspace = true
+tempfile.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
