--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,12 +68,14 @@ serde_cbor = "0"
 agave-geyser-plugin-interface = "3"
 agave-snapshots = "3"
 solana-address = "1"
+solana-account = "3"
 solana-hash = "3"
 solana-blake3-hasher = "=3.0.0"
 solana-clock = "3"
 solana-epoch-rewards-hasher = "=3.0.0"
 solana-keccak-hasher = "=3.0.0"
 solana-logger = "3"
+solana-pubkey = "3"
 solana-signature = { version = "3", default-features = false }
 solana-accounts-db = "3"
 solana-entry = "3"
