--- a/jetstreamer-node/Cargo.toml
+++ b/jetstreamer-node/Cargo.toml
@@ -15,6 +15,7 @@ jetstreamer-firehose.workspace = true
 log.workspace = true
 reqwest.workspace = true
 serde_json.workspace = true
+solana-account.workspace = true
 solana-accounts-db.workspace = true
 solana-clock.workspace = true
 solana-genesis-utils.workspace = true
@@ -22,6 +23,7 @@ solana-geyser-plugin-manager.workspace = true
 solana-hash.workspace = true
 solana-ledger.workspace = true
 solana-logger.workspace = true
+solana-pubkey.workspace = true
 solana-rpc.workspace = true
 solana-runtime.workspace = true
 solana-signature.workspace = true
