--- a/jetstreamer-node/geyser-plugin/Cargo.toml
+++ b/jetstreamer-node/geyser-plugin/Cargo.toml
@@ -12,4 +12,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 agave-geyser-plugin-interface.workspace = true
+dashmap.workspace = true
 log.workspace = true
