--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "jetstreamer-firehose",
+    "jetstreamer-horizon",
     "jetstreamer-node",
     "jetstreamer-node/geyser-plugin",
     "jetstreamer-plugin",
@@ -40,6 +41,7 @@ tokio = "1"
 futures-util = { version = "0", default-features = false }
 futures = "0"
 log = "0"
+lencode = { version = "0.1", features = ["solana", "std"] }
 once_cell = "1"
 serde_json = { version = "1", default-features = false }
 thiserror = { version = "2", default-features = false }
