print the sizes

--- a/jetstreamer-node/geyser-plugin/Cargo.toml
+++ b/jetstreamer-node/geyser-plugin/Cargo.toml
@@ -14,3 +14,4 @@ crate-type = ["cdylib"]
 jetstreamer-horizon.workspace = true
 agave-geyser-plugin-interface.workspace = true
 log.workspace = true
+lencode.workspace = true
