--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libudev-dev clang llvm-dev libclang-dev
+          sudo apt-get install -y build-essential libudev-dev clang llvm-dev libclang-dev pkg-config
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.9
       - name: cargo check (${{ matrix.name }})
@@ -52,7 +52,7 @@ jobs:
       - name: Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libudev-dev clang llvm-dev libclang-dev
+          sudo apt-get install -y build-essential libudev-dev clang llvm-dev libclang-dev pkg-config
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.9
       - name: cargo test (${{ matrix.name }})
@@ -67,7 +67,7 @@ jobs:
       - name: Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libudev-dev clang llvm-dev libclang-dev
+          sudo apt-get install -y build-essential libudev-dev clang llvm-dev libclang-dev pkg-config
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.9
       - name: Install cargo-fmt
@@ -84,7 +84,7 @@ jobs:
       - name: Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libudev-dev clang llvm-dev libclang-dev
+          sudo apt-get install -y build-essential libudev-dev clang llvm-dev libclang-dev pkg-config
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.9
       - name: cargo doc
@@ -106,7 +106,7 @@ jobs:
       - name: Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libudev-dev clang llvm-dev libclang-dev
+          sudo apt-get install -y build-essential libudev-dev clang llvm-dev libclang-dev pkg-config
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.9
       - name: Install cargo-clippy
@@ -123,7 +123,7 @@ jobs:
       - name: Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libudev-dev clang llvm-dev libclang-dev
+          sudo apt-get install -y build-essential libudev-dev clang llvm-dev libclang-dev pkg-config
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.9
       - name: cargo fix --workspace
