properly use ripget

--- a/jetstreamer-node/Cargo.toml
+++ b/jetstreamer-node/Cargo.toml
@@ -16,6 +16,7 @@ dashmap.workspace = true
 jetstreamer-firehose.workspace = true
 log.workspace = true
 reqwest.workspace = true
+ripget = "0.1"
 serde_json.workspace = true
 solana-account.workspace = true
 solana-accounts-db.workspace = true
