fail fast actually

--- a/jetstreamer-node/Cargo.toml
+++ b/jetstreamer-node/Cargo.toml
@@ -14,6 +14,7 @@ cid.workspace = true
 crossbeam-channel.workspace = true
 ctrlc.workspace = true
 dashmap.workspace = true
+env_logger.workspace = true
 jetstreamer-firehose.workspace = true
 log.workspace = true
 reqwest.workspace = true
@@ -35,6 +36,7 @@ solana-signature.workspace = true
 solana-entry.workspace = true
 solana-transaction.workspace = true
 solana-transaction-status.workspace = true
+tar.workspace = true
 tempfile.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
