--- a/jetstreamer-node/Cargo.toml
+++ b/jetstreamer-node/Cargo.toml
@@ -37,6 +37,8 @@ solana-signature.workspace = true
 solana-entry.workspace = true
 solana-transaction.workspace = true
 solana-transaction-status.workspace = true
+solana-svm.workspace = true
+solana-svm-timings.workspace = true
 tar.workspace = true
 tempfile.workspace = true
 thiserror.workspace = true
